--- a/Module1/CaseStudy/Yeu_cau_5.html
+++ b/Module1/CaseStudy/Yeu_cau_5.html
@@ -75,7 +75,7 @@
     }
 
     function displayCustomer() {
-        let text = "Chọn số tương ứng để sửa xem toàn bộ thông tin:\n";
+        let text = "Chọn số tương ứng để xem toàn bộ thông tin:\n";
         for (let i = 0; i < arrListCustomers.length; i++) {
             text += i + ". Name: " + arrListCustomers[i][0] + "   " + "CMND: " + arrListCustomers[i][1] + "\n";
         }
@@ -175,7 +175,7 @@
     }
     
     function deleteCustomer() {
-        let text = "Chọn số tương ứng để xóa thông tin:\n";
+        let text = "Chọn số tương ứng để xóa thông tin khách hàng:\n";
         for (let i = 0; i < arrListCustomers.length; i++) {
             text += i + ". Name: " + arrListCustomers[i][0] + "   " + "CMND: " + arrListCustomers[i][1] + "\n";
         }
