--- a/Module1/[11]Giai_quyet_van_de_va_thuat_toan/Thuc_hanh/demo1.html
+++ b/Module1/[11]Giai_quyet_van_de_va_thuat_toan/Thuc_hanh/demo1.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 <script>
-    let arr = [0, 3, 4, 5, 6, 9, 1, 2, 456, 5, 8, 1, 11, 33, 8, 290];
+    // let arr = [0, 3, 4, 5, 6, 9, 1, 2, 456, 5, 8, 1, 11, 33, 8, 290];
+    let arr = [190, 8, 16, 4, 7, 2, 31, 30];
     let number = 11;
     let max1;
     let max2;
