--- a/Module1/[11]Giai_quyet_van_de_va_thuat_toan/Bai_tap/demo.html
+++ b/Module1/[11]Giai_quyet_van_de_va_thuat_toan/Bai_tap/demo.html
@@ -6,7 +6,11 @@
 </head>
 <body>
 <script>
-
+    let a = 1;
+    let b = 5;
+    if (Number.isInteger(Math.sqrt(0))) {
+        alert("a")
+    }
 </script>
 </body>
 </html>
