--- a/Module1/[10]Xu_ly_chuoi/Bai_tap/[1]Validate_email.html
+++ b/Module1/[10]Xu_ly_chuoi/Bai_tap/[1]Validate_email.html
@@ -11,7 +11,7 @@
         isValidEmail(inputString);
     }
     function isValidEmail(str) {
-        let pattern = /^[0-9A-za-z]+[0-9A-Za-z]*@[0-9A-Za-z]+(.[0-9A-Za-z]+){1,2}$/;
+        let pattern = /^[0-9A-Za-z]+[0-9A-Za-z]*@[0-9A-Za-z]+(.[0-9A-Za-z]+){1,2}$/;
         // let patt = /^[a-z][a-z0-9_.]{5,32}@[a-z0-9]{2,}(\.[a-z0-9]{2,4}){1,2}$/;
         if (pattern.test(str)) {
             alert("Email hợp lệ");
